--- a/src/bsdfs/SConscript
+++ b/src/bsdfs/SConscript
@@ -30,7 +30,7 @@ plugins += env.SharedLibrary('thindielectric', ['thindielectric.cpp'])
 
 # add by Zeru
 plugins += env.SharedLibrary('svneuralbsdf', ['svneuralbsdf.cpp'])
-plugins += env.SharedLibrary('neuralbsdf', ['neuralbsdf.cpp'])
+# plugins += env.SharedLibrary('neuralbsdf', ['neuralbsdf.cpp'])
 
 # The Irawan-Marschner plugin uses a Boost::Spirit parser, which makes it
 # pretty heavy stuff to compile. Go easy on the compiler flags:
